tests/lean/list_local_vars.lean.expected.out
[α, c, b, a]
[b, a]
[]
list_local_vars.lean:56:9: error: unknown identifier 'β'
list_local_vars.lean:56:4: error: don't know how to synthesize placeholder
context:
a b : ℕ
⊢ Sort ?
list_local_vars.lean:57:9: error: unknown identifier 'γ'
list_local_vars.lean:57:4: error: don't know how to synthesize placeholder
context:
a b : ℕ
⊢ Sort ?
x : ℕ → ℕ → ⁇
⊢ true
list_local_vars.lean:64:11: error: unknown identifier 'β'
list_local_vars.lean:64:4: error: don't know how to synthesize placeholder
context:
a b : ℕ
⊢ Sort ?
list_local_vars.lean:65:11: error: unknown identifier 'γ'
list_local_vars.lean:65:4: error: don't know how to synthesize placeholder
context:
a b : ℕ
⊢ Sort ?
x' : ℕ → ℕ → Π (β : Type), β → β
y' : ℕ → ℕ → Type → Π (γ : Type u_1), γ → γ
parameter δ : Type
list_local_vars.lean:73:0: error: unknown identifier β
list_local_vars.lean:76:0: error: unknown identifier γ
a
[b, a]
list_local_vars.lean:83:0: error: tactic failed, there are unsolved goals
state:
a b c : ℕ
⊢ c ≤ 3
